fix(header): alignement navbar et correction scroll en mobile

--- a/src/component/header/style/module/_brand.scss
+++ b/src/component/header/style/module/_brand.scss
@@ -11,6 +11,7 @@
     @include margin-y(-4v, lg);
     @include size(100%);
     @include padding-x(1v);
+    overflow: hidden;
 
     @include media-query.respond-from(lg) {
       flex-wrap: nowrap;
