--- a/src/component/header/style/module/_navbar.scss
+++ b/src/component/header/style/module/_navbar.scss
@@ -11,6 +11,7 @@
     @include padding(1v);
     @include margin-left(auto);
     @include margin-right(-2v);
+    @include margin-top(1v);
     order: 3;
     flex: 0 0 auto;
     align-self: flex-start;
